feat: add second TDD iteration